2004-06-03  Max Gilead  <gilead@yellowhedgehog.com>

	* gnu/testlet/java/awt/geom/CubicCurve2D/getFlatness.java,
	gnu/testlet/java/awt/geom/CubicCurve2D/getFlatnessSq.java,
	gnu/testlet/java/awt/geom/FlatteningPathIterator/getWindingRule.java,
	gnu/testlet/java/awt/geom/GeneralPath/append_PathIterator.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/getFlatness.java,
	gnu/testlet/java/awt/geom/QuadCurve2D/getFlatnessSq.java,
	gnu/testlet/java/awt/geom/RoundRectangle2D/contains.java,
	gnu/testlet/java/awt/geom/RoundRectangle2D/intersects.java,
	gnu/testlet/java/awt/image/SinglePixelPackedSampleModel/getSampleSize.java,
	gnu/testlet/java/io/BufferedOutputStream/helper.java,
	gnu/testlet/java/io/File/newFile.java,
	gnu/testlet/java/io/File/security.java,
	gnu/testlet/java/io/FileOutputStream/jdk12.java,
	gnu/testlet/java/io/FileReader/jdk11.java,
	gnu/testlet/java/io/FileWriter/jdk11.java,
	gnu/testlet/java/io/FilterWriter/MyFilterWriter.java,
	gnu/testlet/java/io/FilterWriter/write.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.java,
	gnu/testlet/java/io/ObjectStreamClass/ProxyTest.java,
	gnu/testlet/java/io/ObjectStreamClass/Test.java,
	gnu/testlet/java/io/RandomAccessFile/jdk11.java,
	gnu/testlet/java/lang/Class/reflect2.java,
	gnu/testlet/java/lang/Number/NewNumber.java,
	gnu/testlet/java/lang/StringBuffer/plus.java,
	gnu/testlet/java/lang/reflect/Method/toString.java,
	gnu/testlet/java/net/DatagramPacket/DatagramPacketTest2.java,
	gnu/testlet/java/net/DatagramSocket/DatagramSocketTest.java,
	gnu/testlet/java/net/DatagramSocket/DatagramSocketTestEchoServer.java,
	gnu/testlet/java/net/DatagramSocket/DatagramSocketTestEchoTimeoutServer.java,
	gnu/testlet/java/net/MulticastSocket/MulticastClient.java,
	gnu/testlet/java/net/MulticastSocket/MulticastServer.java,
	gnu/testlet/java/net/ServerSocket/BasicBacklogSocketServer.java,
	gnu/testlet/java/net/ServerSocket/BasicSocketServer.java,
	gnu/testlet/java/net/ServerSocket/MyBasicSocketServer.java,