@@ -1,3 +1,7 @@
+2004-06-05  Jerry Quinn  <jlquinn@optonline.net>
+
+	* gnu/testlet/java/util/zip/ZipEntry/time.java: New test.
+
 2004-06-03  Max Gilead  <gilead@yellowhedgehog.com>
 
 	* gnu/testlet/java/awt/geom/CubicCurve2D/getFlatness.java,
